objects/vlocity_cmt__Attribute__c.object
<CustomObject>
    <description>Represents the definition of an attribute which can be used for profiling, describing or configuring items tracked in the database.  More specifically:
1) Attributes are used to profile accounts and contacts to describe their interests, preferences and any other information that users desire to track. The same attributes can be used on products, documents and other content to describe the target profile of customers who might be interested in them.
2) Attributes can allow users to filter a list of available and eligible products shown on an opportunity, quote or order to those matching some criteria.
3) Attributes can be used to configure individual characteristics of a product on an opportunity, quote or order. For example, the operator may select one of three speeds available on a specific modem.</description>
    <fields>
        <fullName>vlocity_cmt__ActiveFlg__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Flag on Attribute</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApplicableToAllRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reserved for future use.</description>
        <label>Applicable To All Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ApplicableToEntity__c</fullName>
        <description>Reserved for future use.</description>
        <label>Applicable To Entity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Catalog Category</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Product Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeCategoryCode__c</fullName>
        <formula>vlocity_cmt__AttributeCategoryId__r.vlocity_cmt__Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeCategoryId__c</fullName>
        <description>Parent attribute category</description>
        <label>Primary Attribute Category</label>
        <referenceTo>vlocity_cmt__AttributeCategory__c</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeCategoryName__c</fullName>
        <formula>vlocity_cmt__AttributeCategoryId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AutoCode__c</fullName>
        <displayFormat>ATTRIBUTE-{000}</displayFormat>
        <label>Auto Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Code__c</fullName>
        <description>Short code for attributes</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Configurable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag to display if this attribute should be configured or not</description>
        <label>Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CopyMode__c</fullName>
        <description>Reserved for future use.</description>
        <label>Copy Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do Not Copy</fullName>
                </value>
                <value>
                    <fullName>Copy</fullName>
                </value>
                <value>
                    <fullName>Copy Reference</fullName>
                </value>
                <value>
                    <fullName>Generate As New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomConfigUiTemplate__c</fullName>
        <label>Custom Config UI Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DesignTime__c</fullName>
        <description>Reserved for future use.</description>
        <label>Design Time Properties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visible</fullName>
                </value>
                <value>
                    <fullName>Editable</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Nullable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplaySequence__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Display Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EditMode__c</fullName>
        <description>Reserved for future use.</description>
        <label>Edit Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User Editable</fullName>
                </value>
                <value>
                    <fullName>Generated/Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effectivity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effectivity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Filterable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this attribute should be displayed in Filter section</description>
        <label>Filterable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HelpText__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsCloneable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this attribute should be cloned while cloning a line item</description>
        <label>Cloneable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Overridable__c</fullName>
        <description>Reserved for future use.</description>
        <label>Overridable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Any Level</fullName>
                </value>
                <value>
                    <fullName>Object Level</fullName>
                </value>
                <value>
                    <fullName>Record Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PicklistId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Picklist</label>
        <referenceTo>vlocity_cmt__Picklist__c</referenceTo>
        <relationshipLabel>Vlocity Attributes</relationshipLabel>
        <relationshipName>Vlocity_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RunTime__c</fullName>
        <description>Reserved for future use.</description>
        <label>Run Time Properties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visible</fullName>
                </value>
                <value>
                    <fullName>Editable</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Nullable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UniqueNameField__c</fullName>
        <label>Unique Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValueType__c</fullName>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Attribute</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__ActiveFlg__c</columns>
        <columns>vlocity_cmt__AttributeCategoryId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>